--- a/style/style.css
+++ b/style/style.css
@@ -17,12 +17,18 @@ html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   margin-bottom: 82px; /* Margin bottom by footer height */
  }
+ 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 82px; /* Set the fixed height of the footer here */
+}
+
+.row {
+    margin: 0;
 }
