--- a/style/style.css
+++ b/style/style.css
@@ -45,37 +45,6 @@ body {
   height: 100px;
 }
 
-/* #menu-name {
-    padding: 0 50px;
-} */
-
-/* @media screen and (max-width: 768px) {
-    #navbar1 {
-        justify-content: center;
-    }
-} */
-
-/* body {
-    background-color: #efeee7;
-    font-family: Georgia,"Times New Roman",Times,serif;
-    color: #333333;
-    margin: 0;
-    padding: 0; 
-    font-size: 18px;
-    line-height: 150%;
-}
-
-body {
-  margin-bottom: 82px; /* Margin bottom by footer height */
- }
- 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 82px; /* Set the fixed height of the footer here */
-}
-
 .row {
     margin: 0;
 }
@@ -84,31 +53,12 @@ h2 {
     font-size: 24px;
 }
 
-.container {
-    width: 1024px;
-    padding: 20px;
-    margin: 0 auto;
-}
-
-#my-bio {
-    float: left;
-    width: 70%;
-}
-
-#contact-info {
-    width: 30%;
-    line-height: 1.5;
-    float: left;
-}
-
-#contact-info a {
-    color: #d21034;
-}
-
 #bio-image {
     float: left;
     width: 200px;
-    margin-right: 50px;
+    height: auto;
+    margin-right: 20px;
+    margin-bottom: 20px;
     -webkit-box-shadow: 5px 6px 9px 6px rgba(0,0,0,0.87); 
     box-shadow: 5px 6px 9px 6px rgba(0,0,0,0.87);
-} */
+} 
