--- a/style/style.css
+++ b/style/style.css
@@ -57,10 +57,9 @@ h2 {
   float: left;
   /* width: 200px; */
   max-width: 200px;
-  width: auto !important;
+  width: 40% !important;
   height: auto;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin: 20px;
   -webkit-box-shadow: 5px 6px 9px 6px rgba(0, 0, 0, 0.87);
   box-shadow: 5px 6px 9px 6px rgba(0, 0, 0, 0.87);
 }
