--- a/style/style.css
+++ b/style/style.css
@@ -50,10 +50,6 @@ body {
   margin: 0;
 }
 
-h2 {
-  font-size: 24px;
-}
-
 #bio-image {
   float: left;
   /* width: 200px; */
@@ -69,4 +65,17 @@ h2 {
   max-width: 400px;
   width: auto !important;
   height: auto;
+}
+
+.fa-chevron-circle-right {
+  float: right;
+}
+
+.portfolio-div {
+  /* margin: 20px; */
+}
+
+.img-caption {
+  height: 100%;
+  background-color: lightgrey;
 }
