--- a/style/style.css
+++ b/style/style.css
@@ -81,3 +81,12 @@ body {
   height: 100%;
     background-color: lightgrey;
 }
+
+img.responsive-img {
+  margin: 0 auto;
+  max-height: 100px;
+  padding-bottom: 10px;
+  text-align: center;
+  vertical-align: middle;
+  display: table-cell;
+}
